force-app/main/default/objects/XactlyExpress__XCCreditRule__c/XactlyExpress__XCCreditRule__c.object-meta.xml
<CustomObject>
    <label>XCCreditRule</label>
    <nameField>
        <label>CreditRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCCreditRule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>