force-app/main/default/objects/XactlyExpress__XCCreditRule__c/fields/XactlyExpress__AnyUserField__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AnyUserField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AnyUserField</label>
    <type>Checkbox</type>
</CustomField>