force-app/main/default/objects/XactlyExpress__XCCreditRule__c/fields/XactlyExpress__CalcType__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CalcType__c</fullName>
    <label>CalcType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sum</fullName>
                <default>true</default>
                <label>Sum</label>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>