force-app/main/default/objects/XactlyExpress__XCCreditRule__c/fields/XactlyExpress__PlanID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PlanID__c</fullName>
    <label>PlanID</label>
    <referenceTo>XactlyExpress__XCPlan__c</referenceTo>
    <relationshipLabel>XCCreditRule</relationshipLabel>
    <relationshipName>CreditRule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>