force-app/main/default/objects/XactlyExpress__XCCreditRule__c/fields/XactlyExpress__QuotaID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__QuotaID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuotaID</label>
    <referenceTo>XactlyExpress__XCQuota__c</referenceTo>
    <relationshipName>CreditRule</relationshipName>
    <type>Lookup</type>
</CustomField>